# earthworm_mass_estimator

./: README.md  example_notebook.ipynb  pyproject.toml  requirements.txt  streamlit_photo_app.py
.devcontainer/: devcontainer.json
